# rocket-nest-spring

./: .gitignore  README.md  docker-compose.yaml
dotnet/: Makefile  Program.cs  RocketNestSpring.csproj  Sample.cs
dotnet/Resources/: sample.json
lib/: mem.html  mem.txt  req.html
lib/k6/filesystem-get/: dotnet.js  nest.js  rust.js  spring.js
nest/: messages.json  package-lock.json  package.json
nest/src/: healthController.ts  main.ts  nestjs.module.ts
nest/src/file-system/controller/: fs.controller.spec.ts  fs.controller.ts
nest/src/file-system/dto/: read.dto.ts  sample.dto.ts
nest/src/file-system/service/: fs.service.spec.ts  fs.service.ts
nest/src/messages/: message.controller.ts  message.repository.ts  message.service.ts
nest/src/messages/dto/: create-message.dto.ts
rocket/: .env  sample.json
rocket/api/: Cargo.toml
rocket/api/src/: api_catchers.rs  lib.rs  post_handler.rs
rocket/api/src/fairing/: mod.rs  req_res_fairing.rs
rocket/api/src/state/: mod.rs  visit_counter.rs
rocket/application/: Cargo.toml
rocket/application/src/: conn_pool.rs  lib.rs
rocket/application/src/post/: create.rs  mod.rs  read.rs
rocket/domain/: Cargo.toml
rocket/domain/src/: lib.rs  models.rs
rocket/infrastructure/: Cargo.toml
rocket/infrastructure/migrations/2022-12-02-085121_create_posts/: down.sql  up.sql
rocket/infrastructure/src/: lib.rs
rocket/rns/: Cargo.toml  Rocket.toml
rocket/rns/src/: main.rs
rocket/shared/: Cargo.toml
rocket/shared/src/: lib.rs  response_dto.rs
spring/: HELP.md  pom.xml
(+5 files in other folders)
